--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 body {
-    background-color: aquamarine;
+    background-color: whitesmoke;
 }
 .container {
     background-color: white;
