--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     position: relative;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 .container {
     background-color: white;
