--- a/style.css
+++ b/style.css
@@ -11,5 +11,9 @@ body {
 }
 .container {
     background-color: white;
-    
+    width: 1152px
+    height: 700px
+    top: -410px
+    left: -1353px
+
 }
