--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
 }
 .container {
     background-color: white;
-    width: 1152px
-    height: 700px
+    width: 1152px;
+    height: 700px;
     top: -410px
     left: -1353px
 
