--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     background-color: white;
     width: 1152px;
     height: 700px;
-    top: -410px
+    top: -410px;
     left: -1353px
 
 }
