--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     background-color: whitesmoke;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 .container {
     background-color: white;
