--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     background-color: whitesmoke;
     display: flex;
     align-items: center;
+    justify-content: center;
     min-height: 100vh;
 }
 .container {
