--- a/style.css
+++ b/style.css
@@ -16,3 +16,8 @@ body {
     display: flex;
     gap: 0.5rem;
 }
+.left {
+    background-image: url('./Group\ 7.png');
+    background-repeat: no-repeat;
+    width: 35%;
+}
