--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     background-repeat: no-repeat;
     width: 40%;
 }
-.img img {
+img {
     display: flex;
     justify-content: flex-end;
     align-self: flex-end;
