--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ body {
     background-repeat: no-repeat;
     width: 40%;
 }
+.right {
+    width: 60%;
+}
 .img {
     display: flex;
     justify-content: flex-end;
