--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     background-image: url('./Group\ 7.png');
     background-repeat: no-repeat;
     width: 40%;
+    padding-left: 20px;
 }
 .right {
     width: 55%;
