--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
     background-repeat: no-repeat;
     width: 40%;
     padding-left: 30px;
+    color: white;
 }
 .right {
     width: 55%;
