--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ body {
     padding-left: 30px;
     color: white;
 }
+.kodecamp {
+    margin-top: 20px;
+}
 .right {
     width: 55%;
     padding-top: 30px;
