--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
     margin-top: 30px;
     font-weight: bolder;
     font-size: 30px;
+    font-family: 'Play fair display,';
 }
 .right {
     width: 55%;
