--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     font-family: 'Playfair display,';
 }
 .txt {
-    margin-top: px;
+    margin-top: 352px;
 }
 .right {
     width: 55%;
