--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
     font-weight: bolder;
     font-size: 30px;
     font-family: 'Playfair display,';
+    line-height: 39.9px;
 }
 .txt {
     margin-top: 352px;
