--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 }
 .kodecamp {
     margin-top: 39px;
-    font-weight: bolder;
+    font-weight: 700;
     font-size: 30px;
     font-family: 'Playfair display,';
     line-height: 39.9px;
