--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ p.head {
     font-family: 'Poppins';
     font-weight: 700;
     font-weight: 20px;
+    line-height: 30px;
 }
 .right {
     width: 55%;
