--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 p.head {
     font-family: 'Poppins';
     font-weight: 700;
-    font-weight: 20px;
+    font-size: 20px;
     line-height: 30px;
 }
 p.sub {
