--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ p.sub {
     font-weight: 700;
     font-size: 20px;
     line-height: 26.66px;
+    font-family: 'Playfair Display';
 }
 .right {
     width: 55%;
