--- a/style.css
+++ b/style.css
@@ -57,4 +57,6 @@ p.sub {
 .sign_up {
     font-family: 'Fairplay display';
     font-size: 30px;
+    line-height: 39.99px;
+    font-weight: 700;
 }
