--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     width: 1152px;
     height: 700px;
     display: flex;
-    gap: 2.5rem;
+    gap: 3remrem;
 }
 .left {
     background-image: url('./Group\ 7.png');
