--- a/style.css
+++ b/style.css
@@ -54,6 +54,11 @@ p.sub {
     justify-content: flex-end;
     align-self: flex-end;
 }
+form {
+    display: flex;
+    flex-direction: column;
+    align-self: flex-end;
+}
 .sign_up {
     font-family: 'Fairplay display';
     font-size: 30px;
