--- a/style.css
+++ b/style.css
@@ -99,3 +99,9 @@ form {
     height: 40px;
     width: 277px;
 }
+.lname select {
+    border: 1px solid black;
+    border-radius: 4px;
+    height: 40px;
+    width: 277px;
+}
