--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ form {
     font-size: 18px;
     font-weight: 700;
     line-height: 23.99px;
+    padding-top: 10px;
 }
 .lname input {
     border: 1px solid black;
@@ -105,4 +106,5 @@ form {
     border-radius: 4px;
     height: 50px;
     width: 287px;
+    padding-top: 10px;
 }
