--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ form {
     font-size: 18px;
     font-weight: 700;
     line-height: 23.99px;
-    padding-top: 10px;
+    padding-bottom: 10px;
 }
 .lname input {
     border: 1px solid black;
@@ -106,5 +106,4 @@ form {
     border-radius: 4px;
     height: 50px;
     width: 287px;
-    padding-top: 10px;
 }
