--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     margin-top: 322px;
 }
 p.head {
-    font-family: 'Poppins';
+    font-family: 'Poppins', sans-serif;
     font-weight: 700;
     font-size: 20px;
     line-height: 30px;
