--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ p.sub {
     font-size: 18px;
     font-weight: 700;
     line-height: 23.99px;
+    font-family: 'Fairplay display', sans-serif;
  
 }
 .fname input {
@@ -88,7 +89,7 @@ p.sub {
     font-size: 18px;
     font-weight: 700;
     line-height: 23.99px;
-
+    font-family: 'Fairplay display', sans-serif;
 }
 .lname input {
     border: 1px solid black;
