--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ p.sub {
     align-self: flex-end;
 }
 .sign_up  p {
-    font-family: 'Fairplay Display', sans-serif;
+    font-family: 'Playfair Display', sans-serif;
     font-size: 30px;
     line-height: 39.99px;
     font-weight: 700;
