--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ p.sub {
     font-size: 18px;
     font-weight: 700;
     line-height: 23.99px;
-    font-family: 'Fairplay display', sans-serif;
+    font-family: 'Playfair Display', sans-serif;
  
 }
 .fname input {
@@ -89,7 +89,7 @@ p.sub {
     font-size: 18px;
     font-weight: 700;
     line-height: 23.99px;
-    font-family: 'Fairplay Display', sans-serif;
+    font-family: 'Playfair Display', sans-serif;
 }
 .lname input {
     border: 1px solid black;
