--- a/style.css
+++ b/style.css
@@ -103,3 +103,8 @@ p.sub {
     height: 43px;
     width: 280px;
 }
+textarea {
+    border: 1px solid black;
+    border-radius: 4px;
+    height: 40px;
+}
