--- a/style.css
+++ b/style.css
@@ -127,4 +127,5 @@ textarea {
     border: 1px solid #086DB8;
     background-color: #086DB8;
     font-size: 20px;
+    border-radius: 10px 0 10px 0;
 }
