--- a/style.css
+++ b/style.css
@@ -128,4 +128,5 @@ textarea {
     background-color: #086DB8;
     font-size: 20px;
     border-radius: 10px 0 10px 0;
+    line-height: 23.99px;
 }
