--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ textarea {
     width: 222px;
     height: 40px;
     padding: 15px 40px;
+    color: white;
     border: 1px solid #086DB8;
     background-color: #086DB8;
     font-size: 20px;
