--- a/style.css
+++ b/style.css
@@ -130,4 +130,5 @@ textarea {
     font-size: 20px;
     border-radius: 10px 0 10px 0;
     line-height: 23.99px;
+    font-family: 'Playfair Display', sans-serif;
 }
