--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ textarea {
     border: 1px solid #086DB8;
     background-color: #086DB8;
     font-size: 20px;
-    border-radius: 10px 0 10px 0;
+    border-radius: 10px 0px 10px 0px;
     line-height: 23.99px;
     font-family: 'Playfair Display', sans-serif;
 }
