--- a/style.css
+++ b/style.css
@@ -119,6 +119,11 @@ textarea {
     height: 40px;
     margin-bottom: 50px;
 }
+.button {
+    display: flex;
+    justify-content: flex-end;
+    align-self: flex-end;
+}
 .btn {
     text-decoration: none;
     width: 222px;
