--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ textarea {
     width: 222px;
     height: 40px;
     color: white;
+    padding-top: 20px;
     border: 1px solid #086DB8;
     background-color: #086DB8;
     font-size: 20px;
