--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ p.sub {
     width: 40%;
     display: flex;
     flex-direction: column;
-    gap: 10px; 
+  gap: 0.5rem;
 }
 .fname label {
     font-size: 18px;
@@ -87,9 +87,6 @@ p.sub {
 }
 .lname {
     width: 40%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px; 
 }
 .lname label {
     font-size: 18px;
