--- a/style.css
+++ b/style.css
@@ -113,19 +113,18 @@ p.sub {
     margin-top: 20px;
     display: flex;
     flex-direction: column;
+    gap: 0.5rem;
 }
 .info label {
     font-size: 18px;
     font-weight: 700;
     line-height: 23.99px;
     font-family: 'Playfair Display', sans-serif;
-    margin-bottom: 50px;
 }
 textarea {
     border: 1px solid black;
     border-radius: 4px;
     height: 40px;
-    margin-bottom: 50px;
 }
 .button {
     display: flex;
