--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ textarea {
     border: 1px solid black;
     border-radius: 4px;
     height: 40px;
+    margin-bottom: 30px;
 }
 .button {
     display: flex;
