--- a/style.css
+++ b/style.css
@@ -147,6 +147,13 @@ textarea {
     font-family: 'Playfair Display', sans-serif;
     text-align: center;
 }
+.input-container {
+    position: relative;
+  }
+  
+  .input-container input[type="text"] {
+    padding-right: 30px; /* Add space for the arrow */
+  }
 .input-container::after {
     content: url('./Polygon\ 2.png'); /* Unicode arrow character (→) */
     position: absolute;
