--- a/style.css
+++ b/style.css
@@ -151,6 +151,10 @@ textarea {
 .input-with-arrow i {
     position: absolute;
 }
+.input-with-arrow {
+    width: 100%;
+    margin-bottom: 10px;
+}
 .icon img {
     padding: 50px;
 }
